<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/electrolize"
            android:text="@string/regPageTitle"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingClass" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingClass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/electrolize"
                android:hint="@string/emailHint"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingClass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPwdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/electrolize"
                android:hint="@string/passwordHint"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1D094A"
            android:fontFamily="@font/electrolize"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/regButtonText"
            android:textColor="#F4F4F4"
            android:textStyle="bold" />


        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1D094A"
            android:fontFamily="@font/electrolize"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/loginButtonText"
            android:textColor="#EAEAEA"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>